# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  gitignore  pyproject.toml
brain_games/: .calc.py.swp  cli.py  engine.py  even.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
ivan_ivan_t_brain_games.egg-info/: PKG-INFO  SOURCES.txt
