[tool.poetry]
packages = [
  { include = "brain_games" },
]


name = "ivan-ivan-t_brain_games"
version = "0.1.1"
description = ""
authors = ["Ivan Terehov <ivterehov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
